--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@sello-lab/validator",
+  "name": "@sello-lab/logger",
   "bugs": {
-    "url": "https://gitlab.sello.uz/common/backend/validator/-/issues",
+    "url": "https://github.com/HabibovUlugbek/logger/-/issues",
     "email": "bugs@tuneconsulting.net"
   },
   "author": {
@@ -13,14 +13,14 @@
   "license": "MIT",
   "keywords": [
     "nestjs",
-    "validator"
+    "logger"
   ],
-  "homepage": "https://gitlab.sello.uz/common/backend/validator",
+  "homepage": "https://github.com/HabibovUlugbek/logger",
   "repository": {
-    "url": "https://gitlab.sello.uz/common/backend/validator.git",
+    "url": "https://github.com/HabibovUlugbek/logger.git",
     "type": "git"
   },
-  "description": "Validator for NestJS",
+  "description": "Logger for NestJS",
   "publishConfig": {
     "tag": "latest",
     "access": "restricted"
@@ -41,12 +41,10 @@
   },
   "devDependencies": {
     "@nestjs/common": "^9.3.9",
-    "@sello-lab/exceptions": "^1.0.3",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.5",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
-    "class-validator": "^0.14.0",
-    "date-fns": "^2.29.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -58,9 +56,9 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^9.3.9",
-    "@sello-lab/exceptions": "^1.0.3",
-    "class-validator": "^0.14.0",
-    "date-fns": "^2.29.3",
     "reflect-metadata": "^0.1.13"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
