--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sello-lab/logger",
+  "name": "@habibovulugbek/logger",
   "bugs": {
     "url": "https://github.com/HabibovUlugbek/logger/-/issues",
     "email": "bugs@tuneconsulting.net"
