added logging error

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "name": "Tune Consulting",
     "email": "info@tuneconsulting.net"
   },
-  "version": "1.0.5",
+  "version": "1.0.2",
   "license": "MIT",
   "keywords": [
     "nestjs",
@@ -22,8 +22,7 @@
   },
   "description": "Logger for NestJS",
   "publishConfig": {
-    "tag": "latest",
-    "access": "restricted"
+    "tag": "latest"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
